<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微校</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Hello Android, DemoAppActivity!</string>
    <string name="wait4connect">正在连接网络，请稍等...</string>
    <string name="settings">Settings</string>
    <string name="accoutn_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="login_button">登陆</string>
    <string name="register_button">注册</string>
    <string name="setting">设置</string>
    <string name="option">选项</string>
    <string name="create_group">创建新群</string>
    <string name="refresh">刷新</string>
    <string name="account_default">account</string>
    <string name="group_name_hint">请输入群名</string>
    <string name="group_info_hint">请输入群信息</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
	<string name="back">返回</string>
	<string name="details">详细</string>
	<string name="send">发送</string>
	<string name="logout">退出当前账号</string>
	<string name="search">查找</string>
	<string name="group_request">群请求</string>
	<string name="search_input_hint">输入查找的群号</string>
	<string name="join_dialog_tips">你需要发送验证申请，等群主通过</string>
	<string name="join_dialog_message_hint">请输入验证信息</string>
	<string name="group_request_title">请求列表</string>
	<string name="handle_group_request_agree">通过</string>
	<string name="handle_group_request_disagree">拒绝</string>
	<string name="pushable_btn">改权限</string>
	<string name="out_btn">踢出</string>
</resources>
