<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/group_request_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/group_request_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/group_request_back"
            android:text="@string/group_request_title"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />
        <Button 
            android:id="@+id/group_request_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/refresh"
            />
    </RelativeLayout>

    <ListView
        android:id="@+id/group_request_list_view"
        android:layout_below="@id/group_request_top_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="#00000000"
        android:fadingEdge="none" >
    </ListView>

</RelativeLayout>